<resources>
    <string name="app_name">LoginSignupUsingSQLLite</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="enter_username">Enter Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">+</string>
</resources>
